fond4ltlfpltlf/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddl
Rule 1     pddl -> domain
Rule 2     pddl -> problem
Rule 3     domain -> LPAREN DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
Rule 4     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
Rule 5     domain -> LPAREN DEFINE_KEY domain_def require_def predicates_def action_def_lst RPAREN
Rule 6     domain -> LPAREN DEFINE_KEY domain_def predicates_def action_def_lst RPAREN
Rule 7     domain -> LPAREN DEFINE_KEY domain_def action_def_lst RPAREN
Rule 8     problem -> LPAREN DEFINE_KEY problem_def domain_pdef objects_def init_def goal_def RPAREN
Rule 9     domain_pdef -> LPAREN DOMAIN_PKEY NAME RPAREN
Rule 10    domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 11    problem_def -> LPAREN PROBLEM_KEY NAME RPAREN
Rule 12    objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN
Rule 13    init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 14    init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN
Rule 15    goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 16    goal_def -> LPAREN GOAL_KEY ground_predicate RPAREN
Rule 17    require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 18    require_key_lst -> require_key require_key_lst
Rule 19    require_key_lst -> require_key
Rule 20    require_key -> STRIPS_KEY
Rule 21    require_key -> EQUALITY_KEY
Rule 22    require_key -> TYPING_KEY
Rule 23    require_key -> ADL_KEY
Rule 24    require_key -> ND_KEY
Rule 25    types_def -> LPAREN TYPES_KEY typed_lst_name RPAREN
Rule 26    constants_def -> LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
Rule 27    constants_def -> LPAREN CONSTANTS_KEY names_lst RPAREN
Rule 28    typed_lst_name -> names_lst
Rule 29    names_lst -> NAME names_lst
Rule 30    names_lst -> NAME
Rule 31    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 32    predicate_def_lst -> predicate_def predicate_def_lst
Rule 33    predicate_def_lst -> predicate_def
Rule 34    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 35    predicate_def -> LPAREN NAME RPAREN
Rule 36    ground_predicates_lst -> ground_predicate ground_predicates_lst
Rule 37    ground_predicates_lst -> ground_predicate
Rule 38    ground_predicate -> LPAREN NAME RPAREN
Rule 39    ground_predicate -> LPAREN NAME constants_lst RPAREN
Rule 40    constants_lst -> constant constants_lst
Rule 41    constants_lst -> constant
Rule 42    typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst
Rule 43    typed_constants_lst -> constants_lst HYPHEN type
Rule 44    action_def_lst -> action_def action_def_lst
Rule 45    action_def_lst -> action_def
Rule 46    action_def -> LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN
Rule 47    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 48    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 49    precond_def -> PRECONDITION_KEY LPAREN formula RPAREN
Rule 50    formula -> literal
Rule 51    formula -> AND_KEY formula_lst
Rule 52    formula -> OR_KEY formula_lst
Rule 53    formula -> NOT_KEY formula
Rule 54    formula -> IMPLY_KEY formula formula
Rule 55    formula -> EXISTS_KEY LPAREN typed_variables_lst RPAREN formula
Rule 56    formula -> FORALL_KEY LPAREN typed_variables_lst RPAREN formula
Rule 57    formula -> LPAREN AND_KEY formula_lst RPAREN
Rule 58    formula -> LPAREN OR_KEY formula_lst RPAREN
Rule 59    formula -> LPAREN NOT_KEY formula RPAREN
Rule 60    formula -> LPAREN IMPLY_KEY formula formula RPAREN
Rule 61    formula -> LPAREN literal RPAREN
Rule 62    formula -> LPAREN EXISTS_KEY LPAREN typed_variables_lst RPAREN formula RPAREN
Rule 63    formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN formula RPAREN
Rule 64    formula_lst -> formula formula_lst
Rule 65    formula_lst -> formula
Rule 66    effects_def -> EFFECT_KEY LPAREN one_eff_formula RPAREN
Rule 67    one_eff_formula -> literal
Rule 68    one_eff_formula -> AND_KEY
Rule 69    one_eff_formula -> AND_KEY one_eff_formula_lst
Rule 70    one_eff_formula -> ONEOF_KEY atomic_eff_lst
Rule 71    one_eff_formula -> WHEN_KEY formula atomic_eff
Rule 72    one_eff_formula -> LPAREN ONEOF_KEY atomic_eff_lst RPAREN
Rule 73    one_eff_formula -> LPAREN WHEN_KEY formula atomic_eff RPAREN
Rule 74    one_eff_formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN atomic_eff RPAREN
Rule 75    one_eff_formula -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN LPAREN WHEN_KEY formula atomic_eff RPAREN RPAREN
Rule 76    one_eff_formula_lst -> one_eff_formula one_eff_formula_lst
Rule 77    one_eff_formula_lst -> one_eff_formula
Rule 78    atomic_eff_lst -> atomic_eff atomic_eff_lst
Rule 79    atomic_eff_lst -> atomic_eff
Rule 80    atomic_eff -> literal
Rule 81    atomic_eff -> AND_KEY literal_lst
Rule 82    atomic_eff -> LPAREN AND_KEY RPAREN
Rule 83    atomic_eff -> LPAREN AND_KEY literal_lst RPAREN
Rule 84    atomic_eff -> LPAREN WHEN_KEY formula atomic_eff RPAREN
Rule 85    literal_lst -> literal literal_lst
Rule 86    literal_lst -> literal
Rule 87    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 88    literal -> predicate
Rule 89    predicate -> LPAREN NAME variables_lst RPAREN
Rule 90    predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 91    predicate -> LPAREN NAME RPAREN
Rule 92    predicate -> NAME variables_lst
Rule 93    predicate -> EQUALS VARIABLE VARIABLE
Rule 94    predicate -> NAME
Rule 95    typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 96    typed_variables_lst -> variables_lst HYPHEN type
Rule 97    variables_lst -> VARIABLE variables_lst
Rule 98    variables_lst -> VARIABLE
Rule 99    type -> NAME
Rule 100   constant -> NAME

Terminals, with rules where they appear

ACTION_KEY           : 46
ADL_KEY              : 23
AND_KEY              : 13 15 51 57 68 69 81 82 83
CONSTANTS_KEY        : 26 27
DEFINE_KEY           : 3 4 5 6 7 8
DOMAIN_KEY           : 10
DOMAIN_PKEY          : 9
EFFECT_KEY           : 66
EQUALITY_KEY         : 21
EQUALS               : 90 93
EXISTS_KEY           : 55 62
FORALL_KEY           : 56 63 74 75
GOAL_KEY             : 15 16
HYPHEN               : 42 43 95 96
IMPLY_KEY            : 54 60
INIT_KEY             : 13 14
LPAREN               : 3 4 5 6 7 8 9 10 11 12 13 13 14 15 15 16 17 25 26 27 31 34 35 38 39 46 47 48 49 55 56 57 58 59 60 61 62 62 63 63 66 72 73 74 74 75 75 75 82 83 84 87 89 90 91
NAME                 : 9 10 11 29 30 34 35 38 39 46 89 91 92 94 99 100
ND_KEY               : 24
NOT_KEY              : 53 59 87
OBJECTS_KEY          : 12
ONEOF_KEY            : 70 72
OR_KEY               : 52 58
PARAMETERS_KEY       : 47 48
PRECONDITION_KEY     : 49
PREDICATES_KEY       : 31
PROBLEM_KEY          : 11
REQUIREMENTS_KEY     : 17
RPAREN               : 3 4 5 6 7 8 9 10 11 12 13 13 14 15 15 16 17 25 26 27 31 34 35 38 39 46 47 48 49 55 56 57 58 59 60 61 62 62 63 63 66 72 73 74 74 75 75 75 82 83 84 87 89 90 91
STRIPS_KEY           : 20
TYPES_KEY            : 25
TYPING_KEY           : 22
VARIABLE             : 90 90 93 93 97 98
WHEN_KEY             : 71 73 75 84
error                : 

Nonterminals, with rules where they appear

action_def           : 44 45
action_def_lst       : 3 4 5 6 7 44
atomic_eff           : 71 73 74 75 78 79 84
atomic_eff_lst       : 70 72 78
constant             : 40 41
constants_def        : 3
constants_lst        : 39 40 42 43
domain               : 1
domain_def           : 3 4 5 6 7
domain_pdef          : 8
effects_def          : 46
formula              : 49 53 54 54 55 56 59 60 60 62 63 64 65 71 73 75 84
formula_lst          : 51 52 57 58 64
goal_def             : 8
ground_predicate     : 16 36 37
ground_predicates_lst : 13 14 15 36
init_def             : 8
literal              : 50 61 67 80 85 86
literal_lst          : 81 83 85
names_lst            : 27 28 29
objects_def          : 8
one_eff_formula      : 66 76 77
one_eff_formula_lst  : 69 76
parameters_def       : 46
pddl                 : 0
precond_def          : 46
predicate            : 87 88
predicate_def        : 32 33
predicate_def_lst    : 31 32
predicates_def       : 3 4 5 6
problem              : 2
problem_def          : 8
require_def          : 3 4 5
require_key          : 18 19
require_key_lst      : 17 18
type                 : 42 43 95 96
typed_constants_lst  : 12 26 42
typed_lst_name       : 25
typed_variables_lst  : 34 47 55 56 62 63 74 75 95
types_def            : 3 4
variables_lst        : 89 92 95 96 97

Parsing method: LALR

state 0

    (0) S' -> . pddl
    (1) pddl -> . domain
    (2) pddl -> . problem
    (3) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (5) domain -> . LPAREN DEFINE_KEY domain_def require_def predicates_def action_def_lst RPAREN
    (6) domain -> . LPAREN DEFINE_KEY domain_def predicates_def action_def_lst RPAREN
    (7) domain -> . LPAREN DEFINE_KEY domain_def action_def_lst RPAREN
    (8) problem -> . LPAREN DEFINE_KEY problem_def domain_pdef objects_def init_def goal_def RPAREN

    LPAREN          shift and go to state 4

    pddl                           shift and go to state 1
    domain                         shift and go to state 2
    problem                        shift and go to state 3

state 1

    (0) S' -> pddl .



state 2

    (1) pddl -> domain .

    $end            reduce using rule 1 (pddl -> domain .)


state 3

    (2) pddl -> problem .

    $end            reduce using rule 2 (pddl -> problem .)


state 4

    (3) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN . DEFINE_KEY domain_def require_def predicates_def action_def_lst RPAREN
    (6) domain -> LPAREN . DEFINE_KEY domain_def predicates_def action_def_lst RPAREN
    (7) domain -> LPAREN . DEFINE_KEY domain_def action_def_lst RPAREN
    (8) problem -> LPAREN . DEFINE_KEY problem_def domain_pdef objects_def init_def goal_def RPAREN

    DEFINE_KEY      shift and go to state 5


state 5

    (3) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY . domain_def require_def predicates_def action_def_lst RPAREN
    (6) domain -> LPAREN DEFINE_KEY . domain_def predicates_def action_def_lst RPAREN
    (7) domain -> LPAREN DEFINE_KEY . domain_def action_def_lst RPAREN
    (8) problem -> LPAREN DEFINE_KEY . problem_def domain_pdef objects_def init_def goal_def RPAREN
    (10) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (11) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN

    LPAREN          shift and go to state 6

    domain_def                     shift and go to state 7
    problem_def                    shift and go to state 8

state 6

    (10) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (11) problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 9
    PROBLEM_KEY     shift and go to state 10


state 7

    (3) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY domain_def . require_def predicates_def action_def_lst RPAREN
    (6) domain -> LPAREN DEFINE_KEY domain_def . predicates_def action_def_lst RPAREN
    (7) domain -> LPAREN DEFINE_KEY domain_def . action_def_lst RPAREN
    (17) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
    (31) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN
    (44) action_def_lst -> . action_def action_def_lst
    (45) action_def_lst -> . action_def
    (46) action_def -> . LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN

    LPAREN          shift and go to state 11

    require_def                    shift and go to state 12
    predicates_def                 shift and go to state 13
    action_def_lst                 shift and go to state 14
    action_def                     shift and go to state 15

state 8

    (8) problem -> LPAREN DEFINE_KEY problem_def . domain_pdef objects_def init_def goal_def RPAREN
    (9) domain_pdef -> . LPAREN DOMAIN_PKEY NAME RPAREN

    LPAREN          shift and go to state 16

    domain_pdef                    shift and go to state 17

state 9

    (10) domain_def -> LPAREN DOMAIN_KEY . NAME RPAREN

    NAME            shift and go to state 18


state 10

    (11) problem_def -> LPAREN PROBLEM_KEY . NAME RPAREN

    NAME            shift and go to state 19


state 11

    (17) require_def -> LPAREN . REQUIREMENTS_KEY require_key_lst RPAREN
    (31) predicates_def -> LPAREN . PREDICATES_KEY predicate_def_lst RPAREN
    (46) action_def -> LPAREN . ACTION_KEY NAME parameters_def precond_def effects_def RPAREN

    REQUIREMENTS_KEY shift and go to state 20
    PREDICATES_KEY  shift and go to state 21
    ACTION_KEY      shift and go to state 22


state 12

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def constants_def predicates_def action_def_lst RPAREN
    (4) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def action_def_lst RPAREN
    (5) domain -> LPAREN DEFINE_KEY domain_def require_def . predicates_def action_def_lst RPAREN
    (25) types_def -> . LPAREN TYPES_KEY typed_lst_name RPAREN
    (31) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 23

    types_def                      shift and go to state 24
    predicates_def                 shift and go to state 25

state 13

    (6) domain -> LPAREN DEFINE_KEY domain_def predicates_def . action_def_lst RPAREN
    (44) action_def_lst -> . action_def action_def_lst
    (45) action_def_lst -> . action_def
    (46) action_def -> . LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN

    LPAREN          shift and go to state 26

    action_def_lst                 shift and go to state 27
    action_def                     shift and go to state 15

state 14

    (7) domain -> LPAREN DEFINE_KEY domain_def action_def_lst . RPAREN

    RPAREN          shift and go to state 28


state 15

    (44) action_def_lst -> action_def . action_def_lst
    (45) action_def_lst -> action_def .
    (44) action_def_lst -> . action_def action_def_lst
    (45) action_def_lst -> . action_def
    (46) action_def -> . LPAREN ACTION_KEY NAME parameters_def precond_def effects_def RPAREN

    RPAREN          reduce using rule 45 (action_def_lst -> action_def .)
    LPAREN          shift and go to state 26

    action_def                     shift and go to state 15
    action_def_lst                 shift and go to state 29

state 16

    (9) domain_pdef -> LPAREN . DOMAIN_PKEY NAME RPAREN

    DOMAIN_PKEY     shift and go to state 30


state 17

    (8) problem -> LPAREN DEFINE_KEY problem_def domain_pdef . objects_def init_def goal_def RPAREN
    (12) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN

    LPAREN          shift and go to state 31

    objects_def                    shift and go to state 32

state 18

    (10) domain_def -> LPAREN DOMAIN_KEY NAME . RPAREN

    RPAREN          shift and go to state 33


state 19

    (11) problem_def -> LPAREN PROBLEM_KEY NAME . RPAREN
